# talos-terminal-adapter

./: AGENTS.md  Dockerfile  README.md  pyproject.toml
.agent/: README.md  context.md
.agent/agents/design/: brand-guardian.md  ui-designer.md  ux-researcher.md  visual-storyteller.md  whimsy-injector.md
.agent/agents/engineering/: ai-engineer.md  backend-architect.md  devops-automator.md  frontend-developer.md  mobile-app-builder.md  rapid-prototyper.md
.agent/agents/marketing/: app-store-optimizer.md  content-creator.md  growth-hacker.md  instagram-curator.md  reddit-community-builder.md  tiktok-strategist.md  twitter-engager.md
.agent/agents/product/: feedback-synthesizer.md  sprint-prioritizer.md  trend-researcher.md
.agent/agents/project-management/: experiment-tracker.md  project-shipper.md  studio-producer.md
.agent/agents/studio-operations/: analytics-reporter.md  finance-tracker.md  infrastructure-maintainer.md  legal-compliance-checker.md  support-responder.md
.agent/agents/testing/: api-tester.md  performance-benchmarker.md  test-results-analyzer.md  tool-evaluator.md  workflow-optimizer.md
.agent/workflows/: README.md
.agent/workflows/development/: run-dashboard.md  tga-workflow.md  update-readme.md
.agent/workflows/style-guides/: readme-style.md
scripts/: test.sh
src/terminal_adapter/: __init__.py  main.py
src/terminal_adapter/domain/: __init__.py  classifier.py  crypto.py  pty_executor.py  session_manager.py  tga_client.py
tests/: test_classifier.py  test_pty_executor.py  test_terminal_trust.py  test_trust_enforcement.py
